{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 175,
  "lineage": "286f1b96-b8a5-7e33-6571-229aa585a7b0",
  "resources": [
    {
      "module": "module.Admin_VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed1206c2f6427a68",
            "domain": "vpc",
            "id": "eipalloc-0ed1206c2f6427a68",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-206-134-249.compute-1.amazonaws.com",
            "public_ip": "34.206.134.249",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.Admin_VPC.aws_internet_gateway.ig",
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Admin_VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247377477294:internet-gateway/igw-04ba10771bf6c785a",
            "id": "igw-04ba10771bf6c785a",
            "owner_id": "247377477294",
            "tags": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "main-igw",
              "Project": "SevenSender-test"
            },
            "tags_all": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "main-igw",
              "Project": "SevenSender-test"
            },
            "vpc_id": "vpc-027c12a4cace0eff6"
          },
          "dependencies": [
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Admin_VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed1206c2f6427a68",
            "connectivity_type": "public",
            "id": "nat-0c1023483e2c2cda5",
            "network_interface_id": "eni-022b46efe53327a2b",
            "private_ip": "10.3.3.69",
            "public_ip": "34.206.134.249",
            "subnet_id": "subnet-0b69c2ff089a3e4ee",
            "tags": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "main_NAT",
              "Project": "SevenSender-test"
            },
            "tags_all": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "main_NAT",
              "Project": "SevenSender-test"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Admin_VPC.aws_eip.nat_eip",
            "module.Admin_VPC.aws_internet_gateway.ig",
            "module.Admin_VPC.aws_subnet.public_subnet",
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Admin_VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-033795fd0f2e608871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c1023483e2c2cda5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-033795fd0f2e60887",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Admin_VPC.aws_eip.nat_eip",
            "module.Admin_VPC.aws_internet_gateway.ig",
            "module.Admin_VPC.aws_nat_gateway.nat",
            "module.Admin_VPC.aws_route_table.private",
            "module.Admin_VPC.aws_subnet.public_subnet",
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Admin_VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04ba10771bf6c785a",
            "id": "r-rtb-06ad2e620899fde231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06ad2e620899fde23",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Admin_VPC.aws_internet_gateway.ig",
            "module.Admin_VPC.aws_route_table.public",
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Admin_VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247377477294:route-table/rtb-033795fd0f2e60887",
            "id": "rtb-033795fd0f2e60887",
            "owner_id": "247377477294",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "Admin_VPC-private-route-table",
              "Project": "SevenSender-test"
            },
            "tags_all": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "Admin_VPC-private-route-table",
              "Project": "SevenSender-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-027c12a4cace0eff6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Admin_VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247377477294:route-table/rtb-06ad2e620899fde23",
            "id": "rtb-06ad2e620899fde23",
            "owner_id": "247377477294",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "Admin_VPC-public-route-table",
              "Project": "SevenSender-test"
            },
            "tags_all": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "Admin_VPC-public-route-table",
              "Project": "SevenSender-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-027c12a4cace0eff6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Admin_VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a87979cab371b9bc",
            "route_table_id": "rtb-033795fd0f2e60887",
            "subnet_id": "subnet-00ba3af45cab9ee11"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Admin_VPC.aws_route_table.private",
            "module.Admin_VPC.aws_subnet.private_subnet",
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3541a40b7f435b9",
            "route_table_id": "rtb-033795fd0f2e60887",
            "subnet_id": "subnet-0e89b8627efe0371c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Admin_VPC.aws_route_table.private",
            "module.Admin_VPC.aws_subnet.private_subnet",
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Admin_VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f65f480085f1bc39",
            "route_table_id": "rtb-06ad2e620899fde23",
            "subnet_id": "subnet-0b69c2ff089a3e4ee"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Admin_VPC.aws_route_table.public",
            "module.Admin_VPC.aws_subnet.public_subnet",
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010d577825d1f91bf",
            "route_table_id": "rtb-06ad2e620899fde23",
            "subnet_id": "subnet-04a49568702663456"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Admin_VPC.aws_route_table.public",
            "module.Admin_VPC.aws_subnet.public_subnet",
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Admin_VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247377477294:subnet/subnet-00ba3af45cab9ee11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.3.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ba3af45cab9ee11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247377477294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "Admin_VPC-0-private-subnet",
              "Project": "SevenSender-test"
            },
            "tags_all": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "Admin_VPC-0-private-subnet",
              "Project": "SevenSender-test"
            },
            "vpc_id": "vpc-027c12a4cace0eff6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247377477294:subnet/subnet-0e89b8627efe0371c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.3.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e89b8627efe0371c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "247377477294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "Admin_VPC-1-private-subnet",
              "Project": "SevenSender-test"
            },
            "tags_all": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "Admin_VPC-1-private-subnet",
              "Project": "SevenSender-test"
            },
            "vpc_id": "vpc-027c12a4cace0eff6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Admin_VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247377477294:subnet/subnet-0b69c2ff089a3e4ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.3.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b69c2ff089a3e4ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247377477294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "Admin_VPC-0-public-subnet",
              "Project": "SevenSender-test"
            },
            "tags_all": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "Admin_VPC-0-public-subnet",
              "Project": "SevenSender-test"
            },
            "vpc_id": "vpc-027c12a4cace0eff6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247377477294:subnet/subnet-04a49568702663456",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.3.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a49568702663456",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "247377477294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "Admin_VPC-1-public-subnet",
              "Project": "SevenSender-test"
            },
            "tags_all": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "Admin_VPC-1-public-subnet",
              "Project": "SevenSender-test"
            },
            "vpc_id": "vpc-027c12a4cace0eff6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Admin_VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247377477294:vpc/vpc-027c12a4cace0eff6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-0a73c24ddae79e298",
            "default_route_table_id": "rtb-0c4c979ba4db9ddfc",
            "default_security_group_id": "sg-097cebe6ef52a764c",
            "dhcp_options_id": "dopt-e8e5f092",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-027c12a4cace0eff6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c4c979ba4db9ddfc",
            "owner_id": "247377477294",
            "tags": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "Admin_VPC",
              "Project": "SevenSender-test"
            },
            "tags_all": {
              "ManagedBy": "ahmedtahalhosari@gmail.com",
              "Name": "Admin_VPC",
              "Project": "SevenSender-test"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.test-web-app",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:247377477294:loadbalancer/app/alb-tf/76220fa8f640d4b7",
            "arn_suffix": "app/alb-tf/76220fa8f640d4b7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-tf-1443607430.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:247377477294:loadbalancer/app/alb-tf/76220fa8f640d4b7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-tf",
            "security_groups": [
              "sg-017a8b95d2561cccc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04a49568702663456"
              },
              {
                "subnet_id": "subnet-0b69c2ff089a3e4ee"
              }
            ],
            "subnets": [
              "subnet-04a49568702663456",
              "subnet-0b69c2ff089a3e4ee"
            ],
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            },
            "vpc_id": "vpc-027c12a4cace0eff6",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Admin_VPC.aws_subnet.public_subnet",
            "module.Admin_VPC.aws_vpc.vpc",
            "module.test-web-app.aws_security_group.web_app_ec2_all_in_out"
          ]
        }
      ]
    },
    {
      "module": "module.test-web-app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:247377477294:listener/app/alb-tf/76220fa8f640d4b7/3dbc02767754e3c1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:247377477294:targetgroup/tf-web-alb-tg/23aaafca48098959",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:247377477294:listener/app/alb-tf/76220fa8f640d4b7/3dbc02767754e3c1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:247377477294:loadbalancer/app/alb-tf/76220fa8f640d4b7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.Admin_VPC.aws_subnet.public_subnet",
            "module.Admin_VPC.aws_vpc.vpc",
            "module.test-web-app.aws_lb.alb",
            "module.test-web-app.aws_lb_target_group.lb_tg",
            "module.test-web-app.aws_security_group.web_app_ec2_all_in_out"
          ]
        }
      ]
    },
    {
      "module": "module.test-web-app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:247377477294:targetgroup/tf-web-alb-tg/23aaafca48098959",
            "arn_suffix": "targetgroup/tf-web-alb-tg/23aaafca48098959",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:247377477294:targetgroup/tf-web-alb-tg/23aaafca48098959",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-web-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-027c12a4cace0eff6"
          },
          "dependencies": [
            "module.Admin_VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.test-web-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_app_ec2_all_in_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:247377477294:security-group/sg-017a8b95d2561cccc",
            "description": "Allow all inbound, outbound traffic to web application server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017a8b95d2561cccc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_all_in_out",
            "name_prefix": "",
            "owner_id": "247377477294",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-027c12a4cace0eff6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Admin_VPC.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}